infrastructure/bootstrap/infrastructure/prometheus/controller/overlays/odcn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    haproxy.router.openshift.io/ip_whitelist: "147.181.0.0/16"
    haproxy.router.openshift.io/timeout: "60s"
spec:
  rules:
    - host: prometheus.rig.prd1.gn2.quattro.rijksapps.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
  tls:
    - {}
